--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3900",
+  "proxy": "http://movierental-env.eba-ethkjfam.us-west-1.elasticbeanstalk.com/",
   "eslintConfig": {
     "extends": [
       "react-app",
