--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.2",
     "font-awesome": "^4.7.0",
     "joi": "^17.6.4",
+    "joi-objectid": "^4.0.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
